--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,8 @@
         "forge-std/=node_modules/@layerzerolabs/toolbox-foundry/lib/forge-std/",
         "@layerzerolabs/=node_modules/@layerzerolabs/",
         "@openzeppelin/=node_modules/@openzeppelin/",
-        "@axelar-network/=node_modules/@axelar-network/",
-        "@chainlink/=node_modules/@chainlink/",
-        "@eth-optimism/=node_modules/@eth-optimism/"
+        "hardhat-deploy/=node_modules/hardhat-deploy/",
+        "hardhat/=node_modules/hardhat/",
+        "solidity-bytes-utils/=node_modules/solidity-bytes-utils/"
     ]
 }
